k8s/agic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipelineiq-agic
  namespace: pipelineiq
  annotations:
    
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  ingressClassName: agw
  rules:
    - http:
        paths:
          - path: /api/webhooks/github
            pathType: Prefix
            backend:
              service:
                name: webhook-service
                port:
                  number: 8087
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dashboard-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
